# cvpr-lab

./: .gitignore  CMakeLists.txt  README.md
lab01/: CMakeLists.txt  task.txt
lab01/report/: report.md  v1_result.txt  v2_result.txt
lab01/src/: main.cpp  main_v2.cpp  test_threshold.cpp
lab02/: CMakeLists.txt  task.txt
lab02/report/: report.md
lab02/src/: m_detect.hpp  main.cpp
lab03/: CMakeLists.txt  task.txt
lab03/report/: report.md
lab03/src/: main.cpp
